// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Dialog Generator - Snapshot Tests (Intermediate Data) > should produce consistent base config from generator 1`] = `
{
  "backdrop": {
    "background": "color-color-3",
    "opacity": 0.8,
  },
  "background": "color-surface",
  "borderRadius": 12,
  "buttons": {
    "primary": {
      "background": "color-primary",
      "text": "white",
    },
    "secondary": {
      "ring": "color-border",
      "text": "text-color-surface",
    },
  },
  "description": {
    "color": "text-color-muted",
    "fontWeight": 400,
  },
  "header": {
    "closeIcon": {
      "color": "text-color-muted",
      "name": "ph-x",
      "size": 20,
    },
    "title": {
      "color": "text-color-surface",
      "fontWeight": 600,
    },
  },
  "shadow": "shadow-m",
  "text": "text-color-surface",
}
`;

exports[`Dialog Generator - Snapshot Tests (Intermediate Data) > should produce consistent intermediate data for all variants (golden path) 1`] = `
{
  "baseConfig": {
    "backdrop": {
      "background": "color-color-3",
      "opacity": 0.8,
    },
    "background": "color-surface",
    "borderRadius": 12,
    "buttons": {
      "primary": {
        "background": "color-primary",
        "text": "white",
      },
      "secondary": {
        "ring": "color-border",
        "text": "text-color-surface",
      },
    },
    "description": {
      "color": "text-color-muted",
      "fontWeight": 400,
    },
    "header": {
      "closeIcon": {
        "color": "text-color-muted",
        "name": "ph-x",
        "size": 20,
      },
      "title": {
        "color": "text-color-surface",
        "fontWeight": 600,
      },
    },
    "shadow": "shadow-m",
    "text": "text-color-surface",
  },
  "sizeConfig": {
    "base": {
      "buttonSize": "base",
      "descSize": 14,
      "gap": 16,
      "padding": 24,
      "titleSize": 16,
      "titleWeight": 600,
      "width": 384,
    },
    "lg": {
      "buttonSize": "base",
      "descSize": 14,
      "gap": 16,
      "padding": 24,
      "titleSize": 16,
      "titleWeight": 600,
      "width": 512,
    },
    "sm": {
      "buttonSize": "sm",
      "descSize": 14,
      "gap": 8,
      "padding": 16,
      "titleSize": 16,
      "titleWeight": 600,
      "width": 288,
    },
    "xl": {
      "buttonSize": "base",
      "descSize": 14,
      "gap": 16,
      "padding": 24,
      "titleSize": 16,
      "titleWeight": 600,
      "width": 768,
    },
  },
  "sizeValues": [
    "base",
    "sm",
    "lg",
    "xl",
  ],
  "variants": [
    {
      "classes": "min-w-96",
      "config": {
        "buttonSize": "base",
        "descSize": 14,
        "gap": 16,
        "padding": 24,
        "titleSize": 16,
        "titleWeight": 600,
        "width": 384,
      },
      "description": "Default dialog width",
      "size": "base",
    },
    {
      "classes": "min-w-72",
      "config": {
        "buttonSize": "sm",
        "descSize": 14,
        "gap": 8,
        "padding": 16,
        "titleSize": 16,
        "titleWeight": 600,
        "width": 288,
      },
      "description": "Small dialog for simple confirmations",
      "size": "sm",
    },
    {
      "classes": "min-w-[32rem]",
      "config": {
        "buttonSize": "base",
        "descSize": 14,
        "gap": 16,
        "padding": 24,
        "titleSize": 16,
        "titleWeight": 600,
        "width": 512,
      },
      "description": "Large dialog for complex content",
      "size": "lg",
    },
    {
      "classes": "min-w-[48rem]",
      "config": {
        "buttonSize": "base",
        "descSize": 14,
        "gap": 16,
        "padding": 24,
        "titleSize": 16,
        "titleWeight": 600,
        "width": 768,
      },
      "description": "Extra large dialog for detailed views",
      "size": "xl",
    },
  ],
}
`;

exports[`Dialog Generator - Snapshot Tests (Intermediate Data) > should produce consistent size config for base 1`] = `
{
  "buttonSize": "base",
  "descSize": 14,
  "gap": 16,
  "padding": 24,
  "titleSize": 16,
  "titleWeight": 600,
  "width": 384,
}
`;

exports[`Dialog Generator - Snapshot Tests (Intermediate Data) > should produce consistent size config for lg 1`] = `
{
  "buttonSize": "base",
  "descSize": 14,
  "gap": 16,
  "padding": 24,
  "titleSize": 16,
  "titleWeight": 600,
  "width": 512,
}
`;

exports[`Dialog Generator - Snapshot Tests (Intermediate Data) > should produce consistent size config for sm 1`] = `
{
  "buttonSize": "sm",
  "descSize": 14,
  "gap": 8,
  "padding": 16,
  "titleSize": 16,
  "titleWeight": 600,
  "width": 288,
}
`;

exports[`Dialog Generator - Snapshot Tests (Intermediate Data) > should produce consistent size config for xl 1`] = `
{
  "buttonSize": "base",
  "descSize": 14,
  "gap": 16,
  "padding": 24,
  "titleSize": 16,
  "titleWeight": 600,
  "width": 768,
}
`;
